--- a/arch/arm64/configs/vince-perf_defconfig
+++ b/arch/arm64/configs/vince-perf_defconfig
@@ -502,8 +502,7 @@ CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
 # CONFIG_OKL4_GUEST is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 # CONFIG_UNMAP_KERNEL_AT_EL0 is not set
-CONFIG_HARDEN_BRANCH_PREDICTOR=y
-CONFIG_PSCI_BP_HARDENING=y
+# CONFIG_HARDEN_BRANCH_PREDICTOR is not set
 CONFIG_ARM64_SSBD=y
 CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY=y
 CONFIG_ARMV8_DEPRECATED=y
